--- a/API_CONCESIONARIA/src/main/resources/application.properties
+++ b/API_CONCESIONARIA/src/main/resources/application.properties
@@ -15,3 +15,9 @@ logging.level.root=info
 logging.level.com.api_concesionaria=debug
 logging.level.org.springframework=info
 logging.level.org.hibernate.SQL=debug
+
+#Configuracion de subidad de archivos
+max-mb=6
+spring.servlet.multipart.max-file-size=6MB
+spring.servlet.multipart.max-request-size=6MB
+upload.path=src/main/resources/upload/img
