--- a/API_CONCESIONARIA/src/main/resources/application.properties
+++ b/API_CONCESIONARIA/src/main/resources/application.properties
@@ -17,7 +17,7 @@ logging.level.org.springframework=info
 logging.level.org.hibernate.SQL=debug
 
 #Configuracion de subidad de archivos
-max-mb=6
+upload.max-mb=6
 spring.servlet.multipart.max-file-size=6MB
 spring.servlet.multipart.max-request-size=6MB
-upload.path=src/main/resources/upload/img
+upload.path=uploads
